2010-07-08  Vitaly Repeshko  <vitalyr@chromium.org>

        Reviewed by Pavel Feldman.

        Fix adoptRef usage violations (mostly in chromium)
        https://bugs.webkit.org/show_bug.cgi?id=41863

        * src/IDBCallbacksProxy.cpp:
        (WebCore::IDBCallbacksProxy::create):
        * src/WebPopupMenuImpl.cpp:
        (WebKit::WebPopupMenu::create):
        * src/WebViewImpl.cpp:
        (WebKit::WebView::create):

2010-07-07  Alexander Pavlov  <apavlov@chromium.org>

        Reviewed by Darin Fisher.

        [Chromium] Crash when re-entering message loop

        Allow re-entrancy of the message loop by tracking all suspended pages
        through a PageGroupLoadDeferrer stack.
        https://bugs.webkit.org/show_bug.cgi?id=41697

        * src/WebViewImpl.cpp:
        (WebKit::WebView::willEnterModalLoop):
        (WebKit::WebView::didExitModalLoop):
        * src/js/Tests.js:
        (.TestSuite.prototype.evaluateInConsole_):
        (.TestSuite.prototype.testCompletionOnPause):
        (.TestSuite.prototype.testMessageLoopReentrant.this):

2010-07-08  David Holloway  <dhollowa@chromium.org>

        Reviewed by Darin Fisher.

        [chromium] Exposes WebNode::unwrap() and WebNode::constUnwrap() for 
        use by other code in WebKit/chromium/src.

        Specific use of these methods is made in WebFrameImpl.cpp.  This is
        preferred to the cast operator call that was happening prior to this
        change.

        https://bugs.webkit.org/show_bug.cgi?id=41477

        * public/WebNode.h:
        * src/WebFrameImpl.cpp:
        (WebKit::WebFrameImpl::registerPasswordListener):
        (WebKit::WebFrameImpl::notifiyPasswordListenerOfAutocomplete):
        (WebKit::WebFrameImpl::getPasswordListener):
        * src/WebFrameImpl.h:

2010-07-07  Pavel Podivilov  <podivilov@chromium.org>

        Reviewed by Yury Semikhatsky.

        Web Inspector: convert script offset to webkit format
        https://bugs.webkit.org/show_bug.cgi?id=41755
