@@ -2,6 +2,17 @@
 
         Reviewed by Pavel Feldman.
 
+        [chromium] Fix deletion has begun assertion in TestImage destructor.
+        https://bugs.webkit.org/show_bug.cgi?id=41883
+
+        * tests/DragImageTest.cpp:
+        (WebCore::TestImage::create):
+        (WebCore::TEST):
+
+2010-07-08  Vitaly Repeshko  <vitalyr@chromium.org>
+
+        Reviewed by Pavel Feldman.
+
         Fix adoptRef usage violations (mostly in chromium)
         https://bugs.webkit.org/show_bug.cgi?id=41863
 
